# HLite

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/BasicWindow/: main.cpp
example/Graphics2D/BasicWindow/: main.cpp
example/Graphics2D/InputForm/: main.cpp
lib/raylib/: put_raylib_dll_here.md
lib/raylib/include/: put_raylib_header_here.md
src/include/HLITE/: Core.hpp  File.hpp  Graphics2D.hpp  Preprocessor.hpp  Shader.hpp  UserInterface.hpp  Utility.hpp
src/resources/shaders/core330/: OldLighting.fs  lighting.fs
src/source/: Core.cpp  File.cpp  Graphics2D.cpp  HLiteMain.cpp  Shader.cpp  UserInterface.cpp  Utility.cpp
